# hello_ggml

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  README.md  sd_wrapper.hpp  txt2img_cli.cpp  txt2img_gui.cpp
